# SimplisticDI

./: CMakeLists.txt  README.md
cmake/: sdi-config.cmake.in  simplistic-di-config.cmake.in
include/sdi/: sdi.h
include/simplistic/: di.h
tests/: CMakeLists.txt  playground.cpp  tests.cpp
